--- a/index.html
+++ b/index.html
@@ -67,20 +67,17 @@
       <li>Python</li>
       <li>Tenosorflow</li>
     </ul>
+  <h2>University Work</h2>
+    <h3> Projects </h3>
+      <li>  </li>
+    <h3> Blogs </h3>
+  
+
 	<h2>Contact Me</h2>
 	<h3>LinkedIn
 	<script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script><div class="badge-base LI-profile-badge" data-locale="en_US" data-size="large" data-theme="dark" data-type="HORIZONTAL" data-vanity="nikil-patel-85119541" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://uk.linkedin.com/in/nikil-patel-85119541?trk=profile-badge">Nikil Patel</a></div>
 	<h3>
 	<h3>To book one to one call <br><a class="badge-base__link LI-simple-link" href="https://topmate.io/nikilpatel94">topmate.io</a> . </div></h3>
-    <!--<h2>Experience</h2>
-    <h3>Consultant, Evosys(A Mastek Company)</h3>
-    <p>At ABC Consulting, I worked with clients from various industries to provide data-driven insights and develop customized solutions. I led teams and collaborated closely with stakeholders to identify business challenges, design analytical strategies, and deliver actionable recommendations.</p>
-    <h3>Machine Learning Engineer, XYZ Tech</h3>
-    <p>As a machine learning engineer at XYZ Tech, I developed and implemented machine learning models to solve complex problems. I worked on projects ranging from natural language processing to computer vision, applying state-of-the-art algorithms and techniques to deliver scalable and efficient solutions.</p>
-    <h2>Contact Me</h2>
-    <p>Email: john.doe@example.com</p>
-    <p>Phone: (123) 456-7890</p>
-	-->
   </div>
 </body>
 </html>
