--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     </ul>
   <h2>University Work</h2>
     <h3> Projects </h3>
-      <li>  </li>
+      <li>1. Final Project:  </li>
     <h3> Blogs </h3>
   
 
