--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     </ul>
   <h2>University Work</h2>
     <h3> Projects </h3>
-      <li>1. Final Project:  </li>
+      <li><t>Final Project:Deep Learning for Microparticle Characterisation in Medicines Manufacturing at CMAC using Self supervised Learning (SimCLR) <\t></li>
     <h3> Blogs </h3>
   
 
