--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       <li>Python</li>
       <li>Tenosorflow</li>
     </ul>
-  <h2>University Work</h2>
+  <h2>MSc. University Work</h2>
     <h3> Projects </h3>
       <li><t>Final Project:Deep Learning for Microparticle Characterisation in Medicines Manufacturing at CMAC using Self supervised Learning (SimCLR) <\t></li>
     <h3> Blogs </h3>
