--- a/index.html
+++ b/index.html
@@ -69,7 +69,9 @@
     </ul>
   <h2>MSc. University Work</h2>
     <h3> Projects </h3>
-      <li><t>Final Project:Deep Learning for Microparticle Characterisation in Medicines Manufacturing at CMAC using Self supervised Learning (SimCLR) <\t></li>
+      <li> &nbsp (1) Final Project:Deep Learning for Microparticle Characterisation in Medicines Manufacturing at CMAC using Self supervised Learning (SimCLR)</li>
+      <li> &nbsp (2) Group Research paper on Explainable AI- ‘From Black Box to Glass Box: A Review into Making Artificial Intelligence Explainable’ </li>
+      <li> &nbsp (3) Exploring DSP applications- ‘Speech Enhancement using Deep Learning’ </li>
     <h3> Blogs </h3>
   
 
