--- a/index.html
+++ b/index.html
@@ -69,9 +69,11 @@
     </ul>
   <h2>MSc. University Work</h2>
     <h3> Projects </h3>
-      <li> &nbsp (1) Final Project:Deep Learning for Microparticle Characterisation in Medicines Manufacturing at CMAC using Self supervised Learning (SimCLR)</li>
-      <li> &nbsp (2) Group Research paper on Explainable AI- ‘From Black Box to Glass Box: A Review into Making Artificial Intelligence Explainable’ </li>
-      <li> &nbsp (3) Exploring DSP applications- ‘Speech Enhancement using Deep Learning’ </li>
+      <ol type="1">
+      <li> &nbsp <a class="internal" href="https://topmate.io/nikilpatel94">Final Project:Deep Learning for Microparticle Characterisation in Medicines Manufacturing at CMAC using Self supervised Learning (SimCLR)</a></li>    
+      <li> &nbsp Group Research paper on Explainable AI- ‘From Black Box to Glass Box: A Review into Making Artificial Intelligence Explainable’ </li>
+      <li> &nbsp Exploring DSP applications- ‘Speech Enhancement using Deep Learning’ </li>
+      </ol>
     <h3> Blogs </h3>
   
 
