--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <h3> Projects </h3>
       <ol type="1">
       <li> &nbsp <a class="internal" href="https://topmate.io/nikilpatel94">Final Project:Deep Learning for Microparticle Characterisation in Medicines Manufacturing at CMAC using Self supervised Learning (SimCLR)</a></li>    
-      <li> &nbsp Group Research paper on Explainable AI- ‘From Black Box to Glass Box: A Review into Making Artificial Intelligence Explainable’ </li>
+      <li> &nbsp <a class="internal" href="https://github.com/nikilpatel94/nikilpatel94.github.io/blob/main/docs/Paper_Group_08.pdf">Group Research paper on Explainable AI- ‘From Black Box to Glass Box: A Review into Making Artificial Intelligence Explainable’ </a></li>
       <li> &nbsp Exploring DSP applications- ‘Speech Enhancement using Deep Learning’ </li>
       </ol>
     <h3> Blogs </h3>
