--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
   <h2>MSc. University Work</h2>
     <h3> Projects </h3>
       <ol type="1">
-      <li> &nbsp <a class="internal" href="https://github.com/nikilpatel94/nikilpatel94.github.io/blob/main/docs/Poster87_EE997_NikilkumarPoster_Final.pdf">Final Project:Deep Learning for Microparticle Characterisation in Medicines Manufacturing at CMAC using Self supervised Learning (SimCLR)</a></li>
-      <li> &nbsp <a class="internal" href="https://github.com/nikilpatel94/nikilpatel94.github.io/blob/main/docs/Paper_Group_08.pdf">Group Research paper on Explainable AI- ‘From Black Box to Glass Box: A Review into Making Artificial Intelligence Explainable’ </a></li>
-      <li> &nbsp <a class="internal" href="https://github.com/nikilpatel94/nikilpatel94.github.io/blob/main/docs/Speech%20Enhacement_v3.pdf">Exploring DSP applications- ‘Speech Enhancement using Deep Learning’ </a></li>
+      <li> <a class="internal" href="https://github.com/nikilpatel94/nikilpatel94.github.io/blob/main/docs/Poster87_EE997_NikilkumarPoster_Final.pdf">Final Project:Deep Learning for Microparticle Characterisation in Medicines Manufacturing at CMAC using Self supervised Learning (SimCLR)</a></li>
+      <li> <a class="internal" href="https://github.com/nikilpatel94/nikilpatel94.github.io/blob/main/docs/Paper_Group_08.pdf">Group Research paper on Explainable AI- ‘From Black Box to Glass Box: A Review into Making Artificial Intelligence Explainable’ </a></li>
+      <li> <a class="internal" href="https://github.com/nikilpatel94/nikilpatel94.github.io/blob/main/docs/Speech%20Enhacement_v3.pdf">Exploring DSP applications- ‘Speech Enhancement using Deep Learning’ </a></li>
       </ol>
     <h3> Blogs </h3>
   
