--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Nikilkumar Patel - Oracle EPM Consultant & Machine Learning Engineer</title>
+  <title>Nikil Patel - Oracle EPM Consultant & Deep Learning Engineer</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -81,7 +81,7 @@
 	<h3>LinkedIn
 	<script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script><div class="badge-base LI-profile-badge" data-locale="en_US" data-size="large" data-theme="dark" data-type="HORIZONTAL" data-vanity="nikil-patel-85119541" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://uk.linkedin.com/in/nikil-patel-85119541?trk=profile-badge">Nikil Patel</a></div>
 	<h3>
-	<h3>To book one to one call <br><a class="badge-base__link LI-simple-link" href="https://topmate.io/nikilpatel94">topmate.io</a> . </div></h3>
+	<h3>To book one to one call <br><a class="badge-base__link LI-simple-link" href="https://topmate.io/nikilpatel94">topmate.io</a> </div></h3>
   </div>
 </body>
 </html>
