--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <hr>
     <h2>About Me</h2>
     <p>I am Planning and Integration consultant for Oracle EPM Cloud and Hyperion platforms.<br>
-	I recently moved to the relm of  Machine Learning and currently getting my MSc from the University of Strathclyde.</p>
+	I recently moved to the relm of  Machine Learning and am currently getting my MSc from the University of Strathclyde.</p>
     <h2>Skills</h2>
     <ul>
 	  <li>Microsoft Excel Data Modeling and Analysis</li>
@@ -75,7 +75,7 @@
       <li> <a class="internal" target="_blank"href="https://github.com/nikilpatel94/nikilpatel94.github.io/blob/main/docs/Speech%20Enhacement_v3.pdf">Exploring DSP applications- ‘Speech Enhancement using Deep Learning’ </a></li>
       </ol>
     <h3> Blogs </h3>
-      <ul>Build in progress</ul>
+      <ul>Work in progress</ul>
 
 	<h2>Contact Me</h2>
 	<h3>LinkedIn
