--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Nikil Patel - Oracle EPM Consultant & Deep Learning Engineer</title>
+  <title>Nikil's GitHub</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -49,12 +49,15 @@
 </head>
 <body>
   <div class="container">
-    <h1>Nikilkumar Patel</h1>
+    <h1>Nikil Patel Patel</h1>
     <p>Oracle EPM Consultant & Machine Learning Engineer</p>
     <hr>
     <h2>About Me</h2>
     <p>I am Planning and Integration consultant for Oracle EPM Cloud and Hyperion platforms.<br>
-	I recently moved to the relm of  Machine Learning and am currently getting my MSc from the University of Strathclyde.</p>
+	    I recently started working in the relm of  Machine Learning and Deep Learning and am currently getting my MSc.<br>
+      I am interested in anything related to Mathamatics, Space (and Star Trek ofcourse), Quantum Physics, Linux.<br>
+      Favourite generes for reading and watching is Sci-fi,GeoPolitics and SitCom. 
+    </p>
     <h2>Skills</h2>
     <ul>
 	  <li>Microsoft Excel Data Modeling and Analysis</li>
