--- a/index.html
+++ b/index.html
@@ -49,14 +49,13 @@
 </head>
 <body>
   <div class="container">
-    <h1>Nikil Patel Patel</h1>
+    <h1>Nikil Patel</h1>
     <p>Oracle EPM Consultant & Machine Learning Engineer</p>
     <hr>
     <h2>About Me</h2>
     <p>I am Planning and Integration consultant for Oracle EPM Cloud and Hyperion platforms.<br>
 	    I recently started working in the relm of  Machine Learning and Deep Learning and am currently getting my MSc.<br>
-      I am interested in anything related to Mathamatics, Space (and Star Trek ofcourse), Quantum Physics, Linux.<br>
-      Favourite generes for reading and watching is Sci-fi,GeoPolitics and SitCom. 
+      I am interested in anything related to Mathamatics, Space (and Star Trek ofcourse), Quantum Physics, Linux. Favourite generes for reading and watching are Sci-fi, GeoPolitics and Sitcom.
     </p>
     <h2>Skills</h2>
     <ul>
