--- a/index.html
+++ b/index.html
@@ -57,18 +57,32 @@
 	    I recently started working in the relm of  Machine Learning and Deep Learning and am currently getting my MSc.<br>
       I am interested in anything related to Mathamatics, Space (and Star Trek ofcourse), Quantum Physics, Linux. Favourite generes for reading and watching are Sci-fi, GeoPolitics and Sitcom.
     </p>
-    <h2>Skills</h2>
-    <ul>
-	  <li>Microsoft Excel Data Modeling and Analysis</li>
-	  <li>OLAP Technologies </li>
-      <li>Essbase</li>
-	  <li>Data Integration with Oracle and Non-Oracle Systems</li>
-	  <li>Revopex, Capex, Projects and Workforce Planning</li>
-	  <li>Machine Learning</li>
-	  <li>Deep Learning</li>
-      <li>Python</li>
-      <li>Tenosorflow</li>
-    </ul>
+    
+  <h2>Skills</h2>
+  <h3>Machine Learning Framworks</h3>
+    <ol type="1">
+      <li>PyTorch</li>
+      <li>Tensorflow</li>
+      <li>MatLab</li>
+    </ol><br> 
+    
+  <h3>Machine Learning Packages</h3>
+    <ol type="1">
+      <li>SkLearn</li>
+      <li>SciPy</li>
+      <li>Pandas and NumPy</li>
+      <li>Aesara</li>
+    </ol><br>
+  
+  <h3>EPM Skills</h3>
+  <ol type="1">
+    <li>Microsoft Excel Data Modeling and Analysis</li>
+    <li>OLAP Technology (Oracle Essbase)</li>
+    <li>Data Integration with Oracle and Non-Oracle Systems</li>
+    <li>Revopex, Capex, Projects and Workforce Planning</li>
+    <li>Revopex, Capex, Projects and Workforce Planning</li><br>
+  </ol><br>
+  
   <h2>MSc. University Work</h2>
     <h3> Projects </h3>
       <ol type="1">
