--- a/index.html
+++ b/index.html
@@ -59,32 +59,32 @@
     </p>
     
   <h2>Skills</h2>
-  <h3>Machine Learning Framworks</h3>
+  <h3><u>Machine Learning Framworks</u></h3>
     <ol type="1">
       <li>PyTorch</li>
       <li>Tensorflow</li>
       <li>MatLab</li>
-    </ol><br> 
+    </ol>
     
-  <h3>Machine Learning Packages</h3>
+  <h3><u>Machine Learning Packages</u></h3>
     <ol type="1">
-      <li>SkLearn</li>
-      <li>SciPy</li>
-      <li>Pandas and NumPy</li>
-      <li>Aesara</li>
-    </ol><br>
+      <li>Leanring: SkLearn and SciPy</li>
+      <li>Data: Pandas and NumPy</li>
+      <li>Visual: MatplotLib and Seaborn</li>
+      <li>Misc: Aesara</li>
+    </ol>
   
-  <h3>EPM Skills</h3>
+  <h3><u>EPM Skills</u></h3>
   <ol type="1">
     <li>Microsoft Excel Data Modeling and Analysis</li>
     <li>OLAP Technology (Oracle Essbase)</li>
     <li>Data Integration with Oracle and Non-Oracle Systems</li>
     <li>Revopex, Capex, Projects and Workforce Planning</li>
     <li>Revopex, Capex, Projects and Workforce Planning</li><br>
-  </ol><br>
+  </ol>
   
   <h2>MSc. University Work</h2>
-    <h3> Projects </h3>
+    <h3><u>Projects</u></h3>
       <ol type="1">
       <li> <a class="internal" target="_blank" href="https://github.com/nikilpatel94/nikilpatel94.github.io/blob/main/docs/Poster87_EE997_NikilkumarPoster_Final.pdf">Final Project:Deep Learning for Microparticle Characterisation in Medicines Manufacturing at CMAC using Self supervised Learning (SimCLR)</a></li>
       <li> <a class="internal" target="_blank" href="https://github.com/nikilpatel94/nikilpatel94.github.io/blob/main/docs/Paper_Group_08.pdf">Group Research paper on Explainable AI- ‘From Black Box to Glass Box: A Review into Making Artificial Intelligence Explainable’ </a></li>
