--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <h2>About Me</h2>
     <p>I am Planning and Integration consultant for Oracle EPM Cloud and Hyperion platforms.<br>
 	    I recently started working in the relm of  Machine Learning and Deep Learning and am currently getting my MSc.<br>
-      I am interested in anything related to Mathamatics, Space (and Star Trek ofcourse), Quantum Physics, Linux. Favourite generes for reading and watching are Sci-fi, GeoPolitics and Sitcom.
+      I am immensely interested in anything related to Mathamatics, Quantum Physics, Space and Open Source software. My favourite generes for reading and watching are Sci-fi, GeoPolitics and Sitcom.
     </p>
     
   <h2>Skills</h2>
@@ -75,12 +75,30 @@
     </ol>
   
   <h3><u>EPM Skills</u></h3>
+  <h4>Common EPM Skills</h4>
   <ol type="1">
+    <li>Portfolio Management and Team Leading</li>
     <li>Microsoft Excel Data Modeling and Analysis</li>
-    <li>OLAP Technology (Oracle Essbase)</li>
-    <li>Data Integration with Oracle and Non-Oracle Systems</li>
-    <li>Revopex, Capex, Projects and Workforce Planning</li>
+    <li>End to End Solution design demo in Excel</li>
+    <li>Technical Expertise in designing OLAP Solutions</li>
     <li>Revopex, Capex, Projects and Workforce Planning</li><br>
+    <li>Accounting - P&L, Balance Sheet and Cashflow</li>
+  </ol>
+  <h4>Oracle Hyperion</h4>
+  <ol type="1">
+    <li>Design, deploy and administer Oracle Essbase</li>
+    <li>Product installation and deployment</li>
+    <li>WebLogic and SSL Implementation</li>
+    <li>Data Integration with Oracle and Non-Oracle onpremise Systems using FDMEE</li>
+    <li>Business Rules, Forms, Dimensions, Security, HFR, PUH
+  </ol>
+  <h4>Oracle EPM Cloud</h4>
+  <ol type="1">
+    <li>Design, deploy and administer Essbase cubes</li>
+    <li>EPBCS Seeded modules- Financials,Projects and Capex</li>
+    <li>Data Integration with Oracle and Non-Oracle onpremise and cloud Systems</li>
+    <li>Automations using EPMAutomate and REST interface</li>
+    <li>Business Rules, Groovy Rules, Forms, Dimensions, Security, FR and MR, Approvals
   </ol>
   
   <h2>MSc. University Work</h2>
