--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <li>Microsoft Excel Data Modeling and Analysis</li>
     <li>End to End Solution design demo in Excel</li>
     <li>Technical Expertise in designing OLAP Solutions</li>
-    <li>Revopex, Capex, Projects and Workforce Planning</li><br>
+    <li>Revopex, Capex, Projects and Workforce Planning</li>
     <li>Accounting - P&L, Balance Sheet and Cashflow</li>
   </ol>
   <h4>Oracle Hyperion</h4>
@@ -96,9 +96,11 @@
   <ol type="1">
     <li>Design, deploy and administer Essbase cubes</li>
     <li>EPBCS Seeded modules- Financials,Projects and Capex</li>
-    <li>Data Integration with Oracle and Non-Oracle onpremise and cloud Systems</li>
+    <li>Data & Metadata Integrations with Oracle Fusion, HCM, Netsuite and other Non-Oracle onpremise and cloud Systems</li>
+    <li>Data & Metadata Integration using EPMAgent</li>
     <li>Automations using EPMAutomate and REST interface</li>
-    <li>Business Rules, Groovy Rules, Forms, Dimensions, Security, FR and MR, Approvals
+    <li>Business Rules, Groovy Rules, Forms, Dimensions, Security, FR and MR, Approvals</li>
+    <li>IPM setup and Bring Your Own ML</li>
   </ol>
   
   <h2>MSc. University Work</h2>
