--- a/index.html
+++ b/index.html
@@ -53,8 +53,7 @@
     <p>Oracle EPM Consultant & Machine Learning Engineer</p>
     <hr>
     <h2>About Me</h2>
-    <p>I am Planning and Integration consultant for Oracle EPM Cloud and Hyperion platforms.<br>
-	    I recently started working in the relm of  Machine Learning and Deep Learning and am currently getting my MSc.<br>
+    <p>I have been working as Planning and Integration consultant for Oracle EPM Cloud and Hyperion platforms. I recently started working in the relm of  Machine Learning and Deep Learning and am currently getting my MSc.<br>
       I am immensely interested in anything related to Mathamatics, Quantum Physics, Space and Open Source software. My favourite generes for reading and watching are Sci-fi, GeoPolitics and Sitcom.
     </p>
     
