--- a/index.html
+++ b/index.html
@@ -56,15 +56,22 @@
     <p>I have been working as Planning and Integration consultant for Oracle EPM Cloud and Hyperion platforms. I recently started working in the relm of  Machine Learning and Deep Learning and am currently getting my MSc.<br>
       I am immensely interested in anything related to Mathamatics, Quantum Physics, Space and Open Source software. My favourite generes for reading and watching are Sci-fi, GeoPolitics and Sitcom.
     </p>
-    
+  
+  <br>
   <h2>Skills</h2>
+  <h3><u>Programming Languages</u></h3>
+    <ol type="1">
+      <li>Python</li>
+      <li>Jython</li>
+      <li>Java and Groovy</li>
+      <li>C</li>
+  </ol>
   <h3><u>Machine Learning Framworks</u></h3>
     <ol type="1">
       <li>PyTorch</li>
       <li>Tensorflow</li>
       <li>MatLab</li>
     </ol>
-    
   <h3><u>Machine Learning Packages</u></h3>
     <ol type="1">
       <li>Leanring: SkLearn and SciPy</li>
@@ -72,7 +79,6 @@
       <li>Visual: MatplotLib and Seaborn</li>
       <li>Misc: Aesara</li>
     </ol>
-  
   <h3><u>EPM Skills</u></h3>
   <h4>Common EPM Skills</h4>
   <ol type="1">
@@ -102,6 +108,7 @@
     <li>IPM setup and Bring Your Own ML</li>
   </ol>
   
+  <br>
   <h2>MSc. University Work</h2>
     <h3><u>Projects</u></h3>
       <ol type="1">
@@ -111,7 +118,8 @@
       </ol>
     <h3> Blogs </h3>
       <ul>Work in progress</ul>
-
+  
+  <br>
 	<h2>Contact Me</h2>
 	<h3>LinkedIn
 	<script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script><div class="badge-base LI-profile-badge" data-locale="en_US" data-size="large" data-theme="dark" data-type="HORIZONTAL" data-vanity="nikil-patel-85119541" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://uk.linkedin.com/in/nikil-patel-85119541?trk=profile-badge">Nikil Patel</a></div>
