--- a/index.html
+++ b/index.html
@@ -80,12 +80,14 @@
       <li>Misc: Aesara</li>
     </ol>
   <h3><u>EPM Skills</u></h3>
-  <h4>Common EPM Skills</h4>
+  <h4>Common</h4>
   <ol type="1">
     <li>Portfolio Management and Team Leading</li>
     <li>Microsoft Excel Data Modeling and Analysis</li>
     <li>End to End Solution design demo in Excel</li>
     <li>Technical Expertise in designing OLAP Solutions</li>
+    <li>System Administration</li>
+    <li>User Training Workshops</li>
     <li>Revopex, Capex, Projects and Workforce Planning</li>
     <li>Accounting - P&L, Balance Sheet and Cashflow</li>
   </ol>
@@ -104,7 +106,7 @@
     <li>Data & Metadata Integrations with Oracle Fusion, HCM, Netsuite and other Non-Oracle onpremise and cloud Systems</li>
     <li>Data & Metadata Integration using EPMAgent</li>
     <li>Automations using EPMAutomate and REST interface</li>
-    <li>Business Rules, Groovy Rules, Forms, Dimensions, Security, FR and MR, Approvals</li>
+    <li>Business Rules, Groovy Rules, Forms, Dimensions,Jobs,Security, FR and MR, Approvals</li>
     <li>IPM setup and Bring Your Own ML</li>
   </ol>
   
