--- a/index.html
+++ b/index.html
@@ -120,13 +120,13 @@
       </ol>
     <h3> Blogs </h3>
       <ul>Work in progress</ul>
-  
+    <h3> Personal Projects </h3>
+      <ul>Will be updated soon</ul>
   <br>
 	<h2>Contact Me</h2>
-	<h3>LinkedIn
-	<script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script><div class="badge-base LI-profile-badge" data-locale="en_US" data-size="large" data-theme="dark" data-type="HORIZONTAL" data-vanity="nikil-patel-85119541" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://uk.linkedin.com/in/nikil-patel-85119541?trk=profile-badge">Nikil Patel</a></div>
-	<h3>
-	<h3>To book one to one call <br><a class="badge-base__link LI-simple-link" href="https://topmate.io/nikilpatel94">topmate.io</a> </div></h3>
+    <h3>LinkedIn
+    <script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script><div class="badge-base LI-profile-badge" data-locale="en_US" data-size="large" data-theme="dark" data-type="HORIZONTAL" data-vanity="nikil-patel-85119541" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://uk.linkedin.com/in/nikil-patel-85119541?trk=profile-badge">Nikil Patel</a></div>
+	  <h3>To book one to one call <br><a class="badge-base__link LI-simple-link" href="https://topmate.io/nikilpatel94">topmate.io</a> </div></h3>
   </div>
 </body>
 </html>
