Finalizing new portfolio

--- a/index.html
+++ b/index.html
@@ -432,7 +432,9 @@
                         <h2 class="text-5xl text-white font-bold " style=" font-family:monospace;">Speech Enhancement using Deep Learning </h2>
                     </div>
                     <div class="mb-4 mt-4">
-                        <p class="text-white text-lg" style=" font-family:monospace;">This class presentation explores the Speech Enhancement project 
+                        <p class="text-white text-lg" style=" font-family:monospace;">This presentation was part of my coursework in Digital Signal Processing, 
+                            where I provided an introductory overview of Speech, discussed components and solutions for Speech enhancements,
+                            and a couple of  explored existing solutions that address the issue through Deep Learning.
                         </p>
                     </div>
                     <div class="flex items-center">
@@ -546,7 +548,7 @@
                 </svg>
             </div>
         </button>
-    </div>
+    </div> -->
 
     <div class="wrapperx">
         <div class="containerx num1">
@@ -572,7 +574,7 @@
             <span class="num " data-val="7">0</span>
             <span class="text">Years Experience</span>
         </div>
-    </div> -->
+    </div> 
 
 
 
@@ -755,7 +757,7 @@
 
         </div>
         <div class="infoo">
-            <h3 style="color: white;">© 2024 Phlox - Inspired and modified <a href ="https://demo.phlox.pro/freelancer/" > <I2>Phlox Elementor WordPress</I2></a></h3>
+            <h3 style="color: white;">© 2024 Phlox/Nikil - Inspired by <a href ="https://demo.phlox.pro/freelancer/" > <I2>Phlox Elementor WordPress</I2></a></h3>
         </div>
         <div class="otheracc">
 
