--- a/index.html
+++ b/index.html
@@ -150,6 +150,7 @@
 
                 <ul class="nav-links">
                     <li><a href="#myskills">Skills</a></li>
+                    <li><a href="#EPMSkills">Skills for EPM</a></li>
                     <li><a href="#myprojects">Projects</a></li>
                     <li><a href="#">Blogs(WIP)</a></li>
                     <li><a href="https://topmate.io/nikilpatel94", target="_blank">Book Timings</a></li>
@@ -550,7 +551,7 @@
         </button>
     </div> -->
 
-    <div class="wrapperx">
+    <div class="wrapperx" id = "EPMSkills">
         <div class="containerx num1">
 
             <span class="num " data-val="56">0</span>
