--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
         </div>
         <div class="right-section">
             <div class="intro animatedcard">
-                <strong><h2 style="color: #64f4ab;">--Introduction</h2></strong>
+                <strong><h2 style="color: #64f4ab;">Introduction</h2></strong>
             </div>
             <div class="main-text">
                 <h1>
@@ -219,7 +219,7 @@
     <section class="skills" id="myskills">
         <div class="container" >
             <div style="padding: 9% 5em;" class="content-section">
-                <strong><p style="color: #64f4ab;">--About my skills</p></strong>
+                <strong><p style="color: #64f4ab;">About my skills</p></strong>
                 <h1 style="padding:20px 1.5em; font-size: 36px;">What am I good at?</h1>
                 <p style="padding: 25px ; font-size: larger  ;">I may not be an expert in the field of AI yet, but my impactful career in IT consulting has taught me enough to consider myself a problem solver.
                     In my experience, a person's aspiration and aptitude are enough for solving any problem.<br><br>
@@ -554,25 +554,25 @@
     <div class="wrapperx" id = "EPMSkills">
         <div class="containerx num1">
 
-            <span class="num " data-val="56">0</span>
-            <span class="text">Happy Clients</span>
+            <span class="num " data-val="13">0+</span>
+            <span class="text">Clients consulted</span>
         </div>
 
         <div class="containerx">
 
-            <span class="num" data-val="87">0</span>
-            <span class="text">Projects Done</span>
+            <span class="num" data-val="7">0</span>
+            <span class="text">Full Lifecycle Projects</span>
         </div>
 
-        <div class="containerx">
+        <!-- <div class="containerx">
 
             <span class="num" data-val="16">0</span>
             <span class="text">Awards Winning</span>
-        </div>
+        </div> -->
 
         <div class="containerx num2">
 
-            <span class="num " data-val="7">0</span>
+            <span class="num " data-val="8">0</span>
             <span class="text">Years Experience</span>
         </div>
     </div> 
