--- a/index.html
+++ b/index.html
@@ -150,9 +150,9 @@
 
                 <ul class="nav-links">
                     <li><a href="#myskills">Skills</a></li>
-                    <li><a href="#EPMSkills">Skills for EPM</a></li>
                     <li><a href="#myprojects">Projects</a></li>
                     <li><a href="#">Blogs(WIP)</a></li>
+                    <li><a href="#EPM_stats">EPM Consultancy Stats</a></li>
                     <li><a href="https://topmate.io/nikilpatel94", target="_blank">Book Timings</a></li>
                 </ul>
             </div>
@@ -551,7 +551,18 @@
         </button>
     </div> -->
 
-    <div class="wrapperx" id = "EPMSkills">
+    <!-- <div class="intro animatedcard" id = "EPMSkills">
+        <strong><h2 style="color: #64f4ab;">Consultancy Profile</h2></strong>
+    </div> -->
+    &emsp13;    
+    
+    <div class="wrapperx" >
+        <div class="mb-4 mt-4" id = "EPM_stats">
+            <h4 style="color: #e8eb33;" style=" font-family:monospace;" class="text-lg  font-bold"> Oracle EPM Consultancy Stats  &nbsp;&nbsp;&nbsp;&nbsp;
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            </h4>
+        </div><p>
+            <br>    
         <div class="containerx num1">
 
             <span class="num " data-val="13">0+</span>
@@ -561,7 +572,7 @@
         <div class="containerx">
 
             <span class="num" data-val="7">0</span>
-            <span class="text">Full Lifecycle Projects</span>
+            <span class="text">Full Implementations</span>
         </div>
 
         <!-- <div class="containerx">
