--- a/index.html
+++ b/index.html
@@ -190,14 +190,14 @@
                     <br>
                 </P>
                 <P>
-                    But Why Lieutenant Commaner Data?<br>
+                    But Why Lieutenant Commander Data?<br>
                     Here is a conversation of Data(An android- Artificial Life form) and Timothy(a human who wants to be like commander Data) from 
                     Start Trek The Next Generation, episode Hero Worship [5.11], that accurately describes 
                     how a sentient AI being would feel about humanity.
                     <div class="paragraph animatedcard">
                     <p>
                     <blockquote><I2>
-                    Data: <q cite="https://en.wikiquote.org/wiki/Star_Trek:_The_Next_Generation">I have often wished to be human. I study people carefully, in order to more closely approximate human behavior.</q><br>
+                    Data: <q cite="https://en.wikiquote.org/wiki/Star_Trek:_The_Next_Generation">I have often wished to be human. I study people carefully, in order to more closely approximate human behaviour.</q><br>
                     Timothy: <q cite="https://en.wikiquote.org/wiki/Star_Trek:_The_Next_Generation">Why? We're smarter and stronger than humans, we can do more than they can.</q><br>
                     Data: <q cite="https://en.wikiquote.org/wiki/Star_Trek:_The_Next_Generation">But I cannot take pride in my abilities. I cannot take pleasure in my accomplishments.</q><br>
                     Timothy: <q cite="https://en.wikiquote.org/wiki/Star_Trek:_The_Next_Generation">We never have to feel bad, either.</q><br>
@@ -271,7 +271,7 @@
                     <!-- Card 3 content goes here -->
                     <div style="width: 300px; background-color: #25262a; padding: 20px; border-radius: 44px;">
                         <strong><h3 style="text-align: center; margin-top: 20px; color: #e8eb33; font-family:monospace;">Machine Learning Packages</h3> </strong>
-                        <p style="text-align: left; color: #E8E8E8;font-family:monospace;"> I call them Paracetamol for  ML developers! Everyone needs'em!<br> 
+                        <p style="text-align: left; color: #E8E8E8;font-family:monospace;"> I call them Paracetamol for  ML developers! Everyone needs them!<br> 
                             Numpy(very powerfull!), Pandas, Sklearn,Scipy, Matplotlib, Seaborn,
                             and Aesara(very unique one!) etc.</p>
                     </div>
@@ -282,8 +282,8 @@
                     <!-- Card 3 content goes here -->
                     <div style="width: 300px; background-color: #25262a; padding: 20px; border-radius: 44px;">
                         <strong><h3 style="text-align: center; margin-top: 20px; color: #e8eb33; font-family:monospace;">OLAP and Multidimensional Data Modeling </h3></strong>
-                        <p style="text-align: left; color: #E8E8E8;font-family:monospace;">I think I am really good at Essbase data modeling, data integrations and automations and financial data analaysis.
-                            I consulted numerious customers from various industries for desiginng and implementing their planning, budgting and forecasting business processes using
+                        <p style="text-align: left; color: #E8E8E8;font-family:monospace;">I think I am really good at Essbase data modelling, data integrations and automations and financial data analysis.
+                            I consulted several customers from various industries for designing and implementing their planning, budgeting and forecasting business processes using
                             Oracle Hyperion, Essbase and Oracle EPM cloud platforms.
                         </p>
                     </div>
@@ -295,7 +295,7 @@
                     <div style="width: 300px; background-color: #25262a; padding: 20px; border-radius: 44px;">
                         <strong><h3 style="text-align: center; margin-top: 20px; color: #e8eb33; font-family:monospace;">Other Programming Languages</h3></strong>
                         <p style="text-align: left; color: #E8E8E8;font-family:monospace;">I wouldn't say I am an expert at them but these languages and software that I can understand 
-                            and can easily degug codes and develop applications:<br> C, Java, Groovy, Jython, MATLAB, SQL, VB, Excel, Bash and Powershell
+                            and can easily debug codes and develop applications:<br> C, Java, Groovy, Jython, MATLAB, SQL, VB, Excel, Bash and Powershell
                         </p>
                     </div>
 
@@ -326,7 +326,7 @@
                             When the input is significantly larger and is at microscopic level, the labelling pose a unique set of challenges.
                             I explored these challenges and a framework developed by Google research, called <a href="https://arxiv.org/abs/2002.05709"><I2>SimCLR</I2></a> 
                             that enables training a RESNET based model without any annotations/labels. <br>
-                            The main objective was to find a solution to the ever challenging problem of accurate labelling and the associated cost without lossing the effectiveness.
+                            The main objective was to find a solution to the ever challenging problem of accurate labelling and the associated cost without losing the effectiveness.
                             <br>
                             My solution resulted in <I2>1.5%</I2> to <I2>~2%</I2> more accurate performance with zero label cost when compared to its supervised counterpart.
                             </p>
