--- a/index.html
+++ b/index.html
@@ -253,21 +253,21 @@
                     </div>
                 </div>
 
-                <div class="card  card1 anime" style="background-color: #2d2e32; border: none;">
+                <div class="card  card2 anime" style="background-color: #2d2e32; border: none;">
                     <!-- Card 2 content goes here -->
                     <div style="width: 300px; background-color: #25262a; padding: 20px; border-radius: 44px;">
                         <Strong><h3 style="text-align: center; margin-top: 20px; color: #e8eb33; font-family:monospace;">PyTorch,TensorFlow and NeoGrad</h3></Strong>
                         <p style="text-align: left; color: #E8E8E8;font-family:monospace;">I develop most of my Deep Learning projects using PyTorch. 
                             Because at some point, I was required to learn it and then I finally understood why!
                             <br>I have hands-on experience in TensorFlow as well and I am currently exploring 
-                            <a href="https://neograd.readthedocs.io/en/latest/">NeoGrad</a>!
+                            <a href="https://neograd.readthedocs.io/en/latest/" target="_blank">NeoGrad</a>!
                         </p>
                     </div>
                     
                 </div>
 
 
-                <div class="card  card1 anime" style="background-color: #2d2e32; border: none;">
+                <div class="card  card2 anime" style="background-color: #2d2e32; border: none;">
                     <!-- Card 3 content goes here -->
                     <div style="width: 300px; background-color: #25262a; padding: 20px; border-radius: 44px;">
                         <strong><h3 style="text-align: center; margin-top: 20px; color: #e8eb33; font-family:monospace;">Machine Learning Packages</h3> </strong>
@@ -278,7 +278,7 @@
 
 
                 </div>
-                <div class="card  card1 anime" style="background-color: #2d2e32; border: none;">
+                <div class="card  card3 anime" style="background-color: #2d2e32; border: none;">
                     <!-- Card 3 content goes here -->
                     <div style="width: 300px; background-color: #25262a; padding: 20px; border-radius: 44px;">
                         <strong><h3 style="text-align: center; margin-top: 20px; color: #e8eb33; font-family:monospace;">OLAP and Multidimensional Data Modeling </h3></strong>
@@ -290,7 +290,7 @@
 
                 </div>
                 
-                <div class="card  card1 anime" style="background-color: #2d2e32;border: none;">
+                <div class="card  card3 anime" style="background-color: #2d2e32;border: none;">
                     <!-- Card 4 content goes here -->
                     <div style="width: 300px; background-color: #25262a; padding: 20px; border-radius: 44px;">
                         <strong><h3 style="text-align: center; margin-top: 20px; color: #e8eb33; font-family:monospace;">Other Programming Languages</h3></strong>
