--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
         </div>
         <div class="right-section">
             <div class="intro animatedcard">
-                <strong><h2 style="color: #64f4ab;">Introduction</h2></strong>
+                <strong><h2 style="color: #64f4ab;">About me</h2></strong>
             </div>
             <div class="main-text">
                 <h1>
