Some minor changes

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                     <li><a href="#myskills">Skills</a></li>
                     <li><a href="#myprojects">Projects</a></li>
                     <li><a href="#">Blogs(WIP)</a></li>
-                    <li><a href="#EPM_stats">EPM Consultancy Stats</a></li>
+                    <li><a href="#EPM_stats">My Consultancy Career</a></li>
                     <li><a href="https://topmate.io/nikilpatel94", target="_blank">Book Timings</a></li>
                 </ul>
             </div>
@@ -558,7 +558,7 @@
     
     <div class="wrapperx" >
         <div class="mb-4 mt-4" id = "EPM_stats">
-            <h4 style="color: #e8eb33;" style=" font-family:monospace;" class="text-lg  font-bold"> Oracle EPM Consultancy Stats  &nbsp;&nbsp;&nbsp;&nbsp;
+            <h4 style="color: #e8eb33;" style=" font-family:monospace;" class="text-lg  font-bold"> Consultancy Stats  &nbsp;&nbsp;&nbsp;&nbsp;
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             </h4>
         </div><p>
