Some minor changes

--- a/index.html
+++ b/index.html
@@ -572,7 +572,7 @@
         <div class="containerx">
 
             <span class="num" data-val="7">0</span>
-            <span class="text">Full Implementations</span>
+            <span class="text">Implementations</span>
         </div>
 
         <!-- <div class="containerx">
