Added main github

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                     <defs v-gra="od"></defs>
                 </svg>
             </span> -->
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             <div class="menu">
                 <div class="logo-toggle">
                     <span class="logo"><a href="#">Portfolio</a></span>
@@ -152,8 +152,9 @@
                     <li><a href="#myskills">Skills</a></li>
                     <li><a href="#myprojects">Projects</a></li>
                     <li><a href="#">Blogs(WIP)</a></li>
+                    <li><a href="https://github.com/nikilpatel94"  target="_blank">Github</a></li>
                     <li><a href="#EPM_stats">My Consultancy Career</a></li>
-                    <li><a href="https://topmate.io/nikilpatel94", target="_blank">Book Timings</a></li>
+                    <li><a href="https://topmate.io/nikilpatel94" target="_blank">Have a chat?</a></li>
                 </ul>
             </div>
 
