--- a/index.html
+++ b/index.html
@@ -220,6 +220,12 @@
                     <br>Meanwhile:
                 </p>
                 <div class="project-links">
+                    <a href="https://link.springer.com/chapter/10.1007/978-3-031-96235-6_26" class="project-link" target="_blank">
+                        <i class='bx bx-link-external'></i>Springer Publication
+                    </a>
+                    <a href="assets/docs/Nikil_LLM-Based Automated Hallucination Detection in Multilingual Customer Service_Final.pdf" class="project-link" target="_blank">
+                        <i class='bx bx-link-external'></i> AIAI2025 Conference Slides
+                    </a>
                     <a href="https://www.patronus.ai/case-studies/algomo-preventing-hallucinations-in-ai-powered-customer-support-chatbots-with-lynx" class="project-link" target="_blank">
                         <i class='bx bx-link-external'></i> See our case study with PatronusAI
                     </a>
